--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Angular Demos",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.11.2"
+    "@types/json-server": "^0.14.4",
+    "express": "^4.11.2",
+    "json-server": "^0.16.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server ./"
+    "start": "live-server ./",
+    "jserver": "json-server --watch db.json"
   },
   "keywords": [
     "Angular",
